tests/error/case_const.gw
// [contains] is not constant
// also coverage for 'case'
enum {zero, one, a , b, c };

class C {
	enum { zero, one, a , b, c };
}

switch(maybe) {
  case a:
  case true:
  case false:
  case C.c:
  case maybe:
}
